package chessboard;

public interface Constants {
    public static final int ROW = 11;
    public static final int COLUMN = 13;
    public static final int LouloNumber = 6;
    public static final int GRIDWIDTH = 70;
    public static final int GRIDHEIGHT = 52;
    public static final int PicLength = 70;

}