package chessman.creature;

public class Huluwa extends Justice {

}