package chessman.creature;

import java.util.concurrent.TimeUnit;

public class Pawn extends Evil {

}